# cpp-utils

./: CMakeLists.txt  uncrustify.cfg
src/: ArgParser.cpp  ArgParser.h  ArgType.cpp  ArgType.h  CMakeLists.txt
src/adaptor/: Adaptor.h
src/query/: CMakeLists.txt  SqlAliasField.cpp  SqlAliasField.h  SqlAliasOperand.cpp  SqlAliasOperand.h  SqlClause.h  SqlCondition.cpp  SqlCondition.h  SqlConditions.cpp  SqlConditions.h  SqlOperand.h  SqlSelect.cpp  SqlSelect.h  SqlStatement.h  SqlTable.cpp  SqlTable.h
src/singleton/: Singleton.h
tests/: CMakeLists.txt
tests/adaptor/: CMakeLists.txt  test-adaptor.cpp
tests/query/: CMakeLists.txt  test-query-builder.cpp
tests/singleton/: CMakeLists.txt  test-singleton.cpp
